// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Components > should match snapshots > Sound is disabled 1`] = `
<button
  aria-label="Play sound"
  aria-pressed="false"
  class="sc-bRKDuR gWnvG"
  type="button"
>
  <svg
    aria-hidden="true"
    class="sc-hvigdm lmtBmH"
    data-testid="soundtoggle-icon"
    height="85.355"
    viewBox="80.775 -23.508 85.413 85.355"
    width="85.413"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      class="soundwaves"
      d="M106.056 16.905a19.5 19.5 0 0 1 15.132-15.132M96.015 16.905a30 30 0 0 1 25.173-25.173M86.823 16.905c1.973-18.1 16.265-32.392 34.365-34.365"
      fill="none"
      stroke="#fff"
      stroke-linecap="round"
      stroke-width="5"
    />
    <path
      class="speaker"
      d="m107.943 38.238 22.621 1.639 11.48 11.48 13.501-13.501L144.24 26.55l-1.66-22.947-34.636 34.635Z"
      fill="#fff"
      stroke="#fff"
      stroke-linejoin="round"
      stroke-width="5"
    />
  </svg>
</button>
`;

exports[`Components > should match snapshots > Sound is enabled 1`] = `
<button
  aria-label="Play sound"
  aria-pressed="true"
  class="sc-bRKDuR gWnvG"
  type="button"
>
  <svg
    aria-hidden="true"
    class="sc-hvigdm jQRmwQ"
    data-testid="soundtoggle-icon"
    height="85.355"
    viewBox="80.775 -23.508 85.413 85.355"
    width="85.413"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      class="soundwaves"
      d="M106.056 16.905a19.5 19.5 0 0 1 15.132-15.132M96.015 16.905a30 30 0 0 1 25.173-25.173M86.823 16.905c1.973-18.1 16.265-32.392 34.365-34.365"
      fill="none"
      stroke="#fff"
      stroke-linecap="round"
      stroke-width="5"
    />
    <path
      class="speaker"
      d="m107.943 38.238 22.621 1.639 11.48 11.48 13.501-13.501L144.24 26.55l-1.66-22.947-34.636 34.635Z"
      fill="#fff"
      stroke="#fff"
      stroke-linejoin="round"
      stroke-width="5"
    />
  </svg>
</button>
`;
